# python-basic-hw

./: README.md  main.py  models.py  requirements.txt
homework_01/: main.py
homework_02/: base.py  car.py  engine.py  exceptions.py  plane.py
homework_03/: Dockerfile  app.py  pyproject.toml
homework_04/: docker-compose.yml  jsonplaceholder_requests.py  main.py  models.py  pyproject.toml  requirements.txt
homework_06/: docker-compose.yml  prestart.sh  pyproject.toml
homework_06/app/: config.py
homework_06/app/templates/: base.html  list.html
homework_06/app/views/: items.py
homework_06/app/views/products/: views.py
homework_07/config/: settings.py
homework_07/techshopapp/: models.py  urls.py  views.py
homework_07/techshopapp/migrations/: 0002_user.py
homework_07/techshopapp/templates/techshopapp/: base.html  catalog.html
homework_08/techshopapp/: urls.py  views.py
homework_08/techshopapp/templates/techshopapp/: catalog.html  index.html  item.html
homework_09/config/: urls.py
homework_09/techshopapp/: tests.py  views.py
homework_09/techshopapp/migrations/: 0004_feedback_item.py
homework_10/: app.py
homework_10/.github/workflows/: test.yml
homework_10/techshopapp/: apps.py  forms.py  models.py  urls.py
homework_10/techshopapp/migrations/: 0001_initial.py  0003_feedback.py  0005_alter_feedback_item.py
homework_11_start/: Dockerfile
homework_11_start/app/: app.py  main.py
homework_11_start/app/models/: __init__.py  base.py  flask_db.py  product.py
homework_11_start/app/templates/: add.html  details.html  index.html
(+11 files in other folders)
