[tool.poetry]
name = "homework-03"
version = "0.1.0"
description = ""
authors = ["Anna Gorbunova <81052418+gorbunovaav@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
